<resources>
    <string name="app_name">Háztartási Gépszerviz</string>
    <string name="jelszo">Jelszó</string>
    <string name="e_mail">E-mail</string>
    <string name="kezdolap">Kezdőlap</string>
    <string name="hibajegyek">Hibajegyek</string>
    <string name="settings">Beállítások</string>
    <string name="kilepes">Kilépés</string>
    <string name="ujhibajegy">Új hibajegy</string>
    <string name="ugyfelneve">név</string>
    <string name="ugyfelcime">cím</string>
    <string name="ugyfelszama">telefonszám</string>
    <string name="tervezettkiszallas">kiszállás</string>
    <string name="hibajelenseg">Hibajelenség</string>
    <string name="hozzaadas">Hozzáadás</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_general">Felhasználó</string>
    <string name="pref_title_display_name">Felhasználó neve</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_header_notifications">Értesítések</string>

    <string name="pref_title_new_message_notifications">Bekapcsolva</string>

    <string name="pref_title_ringtone">Értesítési hang</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Rezgés</string>
    <string name="in_app_nofication">Alkalmazáson belüli értesítések</string>
    <string name="pref_email">E-mail</string>
    <string name="pref_phone">Telefonszám</string>
    <string name="change_password_pref">Jelszó megváltoztatása</string>

    <string name="action_today">MA</string>
    <string name="action_day_view">NAPI</string>
    <string name="action_three_day_view">3 NAPI</string>
    <string name="action_week_view">HETI</string>

    <string name="onthisday">Események a mai napon</string>
    <string name="allbutton">ÖSSZES</string>
    <string name="no_planned">Sajnos nincs tervezett esemény.</string>

    <string name="ugyfel_neve_hint">
        <font size="15">Példa Kálmán</font>
    </string>
    <string name="ugyfel_cime_hint">
        <font size="15">4024, Debrecen Fő utca 58.</font>
    </string>
    <string name="hibajelenseg_hint">
        <font size="15">Nem mos a mosógép.</font>
    </string>
    <string name="kiszallas_hint">
        <font size="15">2017.12.23</font>
    </string>

    <string name="szerviz">szerviz</string>
    <string name="helyszini">helyszíni</string>
    <string name="allapotfelmeres">felmérés</string>
    <string name="valami_mas">más</string>
</resources>
