<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/kezdolap" />
        <item
            android:id="@+id/menu_jobreports"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_menu_hibajegy"
            android:title="@string/hibajegyek" />
        <item
            android:id="@+id/menu_calendar"
            android:icon="@drawable/ic_menu_naptar"
            android:title="Naptár" />
    </group>

    <group android:checkableBehavior="all">
        <item android:title="Beállítások"
            android:layout_gravity="bottom">
            <menu>
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/kilepes"/>
            </menu>
        </item>
    </group>
</menu>
