<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/homescreen_fragment"
    tools:context="org.zapto.hazgepszerv.hazgepszervlev_android.fragments.HomeScreenFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:id="@+id/rellayot">

        <TextView
            android:id="@+id/onthisday"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:paddingLeft="16dp"
            android:gravity="center_vertical"
            android:paddingRight="16dp"
            android:text="@string/onthisday"
            android:textSize="17sp"
            android:fontFamily="@string/font_family_medium"
            android:textColor="@color/black"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/allbutton"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@color/colorPrimary"
            android:text="@string/allbutton"
            android:textSize="13sp"
            android:fontFamily="@string/font_family_medium"
            android:textColor="@color/white"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@+id/rellayot">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/noimage"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="65dp"
            android:text="@string/no_planned"
            android:textSize="17sp"
            android:fontFamily="@string/font_family_medium" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/jobreport_list"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>