<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addreport_fragment"
        tools:context="org.zapto.hazgepszerv.hazgepszervlev_android.fragments.NewJobReportFragment">
        <TextView
            android:id="@+id/uj_hibajegy"
            android:text="@string/ujhibajegy"
            android:textSize="30dp"
            android:layout_width="176dp"
            android:layout_height="59dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.208" />

        <EditText android:id="@+id/ugyfel_neve"
            android:background="@drawable/rounded_edittext"
            android:padding="8dp"
            android:layout_width="288dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginStart="8dp"
            android:hint="@string/ugyfelneve"
            android:textColor="@color/aluminum"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="38dp"
            app:layout_constraintTop_toBottomOf="@+id/uj_hibajegy"/>

        <EditText android:id="@+id/ugyfel_cime"
            android:background="@drawable/rounded_edittext"
            android:padding="8dp"
            android:layout_width="288dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginStart="8dp"
            android:hint="@string/ugyfelcime"
            android:textColor="@color/aluminum"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ugyfel_neve" />

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/ugyfel_telefonszama"
            android:background="@drawable/rounded_edittext"
            android:padding="8dp"
            android:layout_width="288dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginStart="8dp"
            android:inputType="phone"
            android:typeface="monospace"
            mask:allowed_chars="1234567890"
            mask:mask="+36 ## ###-####"
            app:keep_hint="true"
            android:textColor="@color/aluminum"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ugyfel_cime"/>

        <EditText android:id="@+id/hibajelenseg"
            android:background="@drawable/rounded_edittext"
            android:padding="8dp"
            android:layout_width="288dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginStart="8dp"
            android:hint="@string/hibajelenseg"
            android:textColor="@color/aluminum"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ugyfel_telefonszama"/>

        <EditText android:id="@+id/tervezett_kiszallas"
            android:background="@drawable/rounded_edittext"
            android:padding="8dp"
            android:layout_width="288dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/tervezettkiszallas"
            android:textColor="@color/aluminum"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/hibajelenseg"/>

        <com.github.florent37.androidslidr.Slidr
            android:id="@+id/munkahossza"
            android:layout_width="289dp"
            android:layout_height="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tervezett_kiszallas"
            app:slidr_draw_bubble="false"
            app:slidr_region_leftColor="#4CAF50"
            app:slidr_regions_centerText="false" />

        <Button
            android:id="@+id/button_add_report"
            android:layout_width="288dp"
            android:layout_height="43dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="36dp"
            android:text="@string/hozzaadas"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:onClick="btn_login_Click"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/munkahossza" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>